--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
               <li class="col-3">
                 <a href="#" class="basic-link header-nav__link">Доставка</a>
               </li>
-              <li class="col-3">
+              <li class="col-4">
                 <a href="#" class="basic-link header-nav__link header-nav__link_warranty">Гарантия</a>
               </li>
-              <li class="col-6">
+              <li class="col-5">
                 <a href="#" class="basic-link header-nav__link header-nav__link_contacts">Контакты</a>
               </li>
             </ul>
@@ -373,7 +373,7 @@
         <p class="col-3 footer-tel">Тел.: <a class="footer-tel__link" href="tel:+74954959595">+7 (495) 495-95-95</a></p>
       </div>
 
-      <div class="grid-row">
+      <div class="grid-row footer__links">
         <div class="col-3"></div>
         <ul class="basic-list col-6 footer-socials">
           <li>
@@ -396,7 +396,7 @@
         <a href=" https://htmlacademy.ru/intensive/htmlcss" class="col-3 footer__copyright">
           <img src="img/footer/logo-html.svg" width="27" height="34" alt="Html Academy">
         </a>
-      </div> 
+      </div>
     </div>
   </footer>
   <!-- footer -->
