--- a/catalog.html
+++ b/catalog.html
@@ -58,10 +58,10 @@
               <li class="col-3">
                 <a href="#" class="basic-link header-nav__link">Доставка</a>
               </li>
-              <li class="col-3">
+              <li class="col-4">
                 <a href="#" class="basic-link header-nav__link header-nav__link_warranty">Гарантия</a>
               </li>
-              <li class="col-6">
+              <li class="col-5">
                 <a href="#" class="basic-link header-nav__link header-nav__link_contacts">Контакты</a>
               </li>
             </ul>
@@ -75,9 +75,9 @@
 
 
   <main class="main">
-    <h1 class="container basic-title catalog-title">Моноподы для селфи</h1>
 
     <div class="container">
+      <h1 class="container basic-title catalog-title">Моноподы для селфи</h1>
       <ul class="basic-list breadcrumbs">
         <li><a href="#" class="breadcrumbs__item">Главная</a></li>
         <li><a href="#" class="breadcrumbs__item">Каталог товаров</a></li>
@@ -88,17 +88,21 @@
     <div class="sort-wrapper">
       <section class="container sort">
         <div class="grid-row">
-          <div class="col-4 sort__filter">
+          <div class="sort__filter">
             <h2 class="sort__title">Фильтр:</h2>
           </div>
 
-          <div class="col-8 sort__sort">
+          <div class="sort__sort">
             <h3 class="sort__title">Сортировка:</h3>
             <ul class="basic-list sort__list">
               <li class="sort__item"><a class="sort__link sort__link_active">По цене</a></li>
               <li class="sort__item"><a href="#" class="sort__link">По типу</a></li>
               <li class="sort__item"><a href="#" class="sort__link">По популярности</a></li>
             </ul>
+            <div class="sort__controls">
+              <button class="sort__button sort__button_up"><span class="visually-hidden">По возростанию</span></button>
+              <button class="sort__button sort__button_active sort__button_down"><span class="visually-hidden">По убыванию</span></button>
+            </div>
           </div>
         </div>
       </section>
@@ -107,7 +111,7 @@
     <div class="сatalog-wrapper">
       <div class="container">
         <div class="grid-row">
-          <section class="col-4 filter">
+          <section class="filter">
             <h2 class="visually-hidden">Фильтр:</h2>
 
             <form action="https://echo.htmlacademy.ru" method="get" class="filter__form">
@@ -196,58 +200,74 @@
                   </li>
                 </ul>
               </fieldset>
-              <button type="submit" class="button">Показать</button>
+              <button type="submit" class="button filter__button">Показать</button>
             </form>
           </section>
           <!-- /.filter -->
 
-          <section class="col-8 catalog">
+          <section class="catalog">
             <h2 class="visually-hidden">Каталог товаров</h2>
 
             <ul class="basic-list grid-row catalog__list">
               <li class="col-6 catalog__item">
                 <img class="catalog__img" src="img/catalog/item-1.jpg" width="360" height="380" alt="Фото товара">
-                <a href="#" class="catalog__text">
-                  Любительская селфи-палка
-                </a>
-                <p class="catalog__price">
-                  500 руб.
-                </p>
-                <a href="#" class="button catalog__button">В корзину</a>
-                <a href="#" class="catalog__link">Добавить к сравнению</a>
+                <div class="catalog__descr">
+                  <a href="#" class="catalog__text">
+                    Любительская селфи-палка
+                  </a>
+                  <p class="catalog__price">
+                    500 руб.
+                  </p>
+                </div>
+                <div class="catalog__actions">
+                  <a href="#" class="button catalog__button">В корзину</a>
+                  <a href="#" class="catalog__link">Добавить к сравнению</a>
+                </div>
               </li>
               <li class="col-6 catalog__item">
                 <img class="catalog__img" src="img/catalog/item-2.jpg" width="360" height="380" alt="Фото товара">
-                <a href="#" class="catalog__text">
-                  Профессиональная<br> селфи-палка
-                </a>
-                <p class="catalog__price">
-                  1 500 руб.
-                </p>
-                <a href="#" class="button catalog__button">В корзину</a>
-                <a href="#" class="catalog__link">Добавить к сравнению</a>
+                <div class="catalog__descr">
+                  <a href="#" class="catalog__text">
+                    Профессиональная<br> селфи-палка
+                  </a>
+                  <p class="catalog__price">
+                    1 500 руб.
+                  </p>
+                </div>
+                <div class="catalog__actions">
+                  <a href="#" class="button catalog__button">В корзину</a>
+                  <a href="#" class="catalog__link">Добавить к сравнению</a>
+                </div>
               </li>
               <li class="col-6 catalog__item">
                 <img class="catalog__img" src="img/catalog/item-3.jpg" width="360" height="380" alt="Фото товара">
-                <a href="#" class="catalog__text">
-                  Непотопляемая<br> селфи-палка
-                </a>
-                <p class="catalog__price">
-                  2 500 руб.
-                </p>
-                <a href="#" class="button catalog__button">В корзину</a>
-                <a href="#" class="catalog__link">Добавить к сравнению</a>
+                <div class="catalog__descr">
+                  <a href="#" class="catalog__text">
+                    Непотопляемая<br> селфи-палка
+                  </a>
+                  <p class="catalog__price">
+                    2 500 руб.
+                  </p>
+                </div>
+                <div class="catalog__actions">
+                  <a href="#" class="button catalog__button">В корзину</a>
+                  <a href="#" class="catalog__link">Добавить к сравнению</a>
+                </div>
               </li>
-              <li class="col-6 catalog__item">
+              <li class="col-6 catalog__item catalog__item_new">
                 <img class="catalog__img" src="img/catalog/item-4.jpg" width="360" height="380" alt="Фото товара">
-                <a href="#" class="catalog__text">
-                  Селфи-палка «Следуй за мной»
-                </a>
-                <p class="catalog__price">
-                  4 900 руб.
-                </p>
-                <a href="#" class="button catalog__button">В корзину</a>
-                <a href="#" class="catalog__link">Добавить к сравнению</a>
+                <div class="catalog__descr">
+                  <a href="#" class="catalog__text">
+                    Селфи-палка «Следуй за мной»
+                  </a>
+                  <p class="catalog__price">
+                    4 900 руб.
+                  </p>
+                </div>
+                <div class="catalog__actions">
+                  <a href="#" class="button catalog__button">В корзину</a>
+                  <a href="#" class="catalog__link">Добавить к сравнению</a>
+                </div>
               </li>
             </ul>
 
@@ -275,9 +295,9 @@
 
         <ul class="basic-list col-6 footer-actions">
           <li class="footer-actions__item">
-            <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_icon_signin">Войти</a>
-            <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_name">Валентин
+            <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_signin">Валентин
               Петухов</a>
+            <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_signout">Выйти</a>
           </li>
           <li class="footer-actions__item">
             <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_icon_compare">Сравнить</a>
@@ -306,9 +326,8 @@
         <p class="col-3 footer-tel">Тел.: <a class="footer-tel__link" href="tel:+74954959595">+7 (495) 495-95-95</a></p>
       </div>
 
-      <div class="grid-row">
-        <div class="col-3"></div>
-        <ul class="basic-list col-6 footer-socials">
+      <div class="grid-row footer__links">
+        <ul class="basic-list col-6 col-offset-left-3 footer-socials">
           <li>
             <a href="#" class="footer-socials__link footer-socials__link_fb">
               <span class="visually-hidden">Facebook</span>
