--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,7 @@
               <li class="sort__item"><a href="#" class="sort__link">По популярности</a></li>
             </ul>
             <div class="sort__controls">
-              <button class="sort__button sort__button_up"><span class="visually-hidden">По возростанию</span></button>
+              <button class="sort__button sort__button_up"><span class="visually-hidden">По возрастанию</span></button>
               <button class="sort__button sort__button_active sort__button_down"><span class="visually-hidden">По убыванию</span></button>
             </div>
           </div>
@@ -123,8 +123,8 @@
                   <div class="filter-price__range">
                     <div class="filter-price__scale">
                       <div class="filter-price__bar"></div>
-                      <div class="filter-price__toggle filter-price__toggle_min" tabindex="0"></div>
-                      <div class="filter-price__toggle filter-price__toggle_max" tabindex="0"></div>
+                      <div class="filter-price__toggle filter-price__toggle_min" tabindex="0" aria-label="от"></div>
+                      <div class="filter-price__toggle filter-price__toggle_max" tabindex="0" aria-label="до"></div>
                     </div>
                   </div>
 
