--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   <title>Моноподы для селфи</title>
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.mini.css">
 </head>
 
 <body class="page-body">
@@ -25,7 +25,7 @@
 
         <ul class="basic-list col-6 grid-row  header-actions">
           <li class="col-6 header-actions__signin">
-            <a href="#" class="basic-link basic-link_icon basic-link_icon_signin">Валентин
+            <a href="profile.html" class="basic-link basic-link_icon basic-link_icon_signin">Валентин
               Петухов</a>
             <a href="#" class="basic-link basic-link_signout">Выйти</a>
           </li>
@@ -101,7 +101,8 @@
             </ul>
             <div class="sort__controls">
               <button class="sort__button sort__button_up"><span class="visually-hidden">По возрастанию</span></button>
-              <button class="sort__button sort__button_active sort__button_down"><span class="visually-hidden">По убыванию</span></button>
+              <button class="sort__button sort__button_active sort__button_down"><span class="visually-hidden">По
+                  убыванию</span></button>
             </div>
           </div>
         </div>
@@ -128,12 +129,12 @@
                     </div>
                   </div>
 
-                  <div class="fiter-prise__number fiter-prise__number_min">
+                  <div class="fiter-price__number fiter-price__number_min">
                     <label for="min-price">от</label>
                     <input class="filter-price__value" type="text" id="min-price" name="min-price" value="0">
                   </div>
 
-                  <div class="fiter-prise__number fiter-prise__number_max">
+                  <div class="fiter-price__number fiter-price__number_max">
                     <label for="max-price">до</label>
                     <input class="filter-price__value" type="text" id="max-price" name="max-price" value="5000">
                   </div>
@@ -295,7 +296,8 @@
 
         <ul class="basic-list col-6 footer-actions">
           <li class="footer-actions__item">
-            <a href="#" class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_signin">Валентин
+            <a href="profile.html"
+              class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_signin">Валентин
               Петухов</a>
             <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_signout">Выйти</a>
           </li>
