--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.mini.css">
 </head>
 
 <body class="page-body">
@@ -155,7 +155,8 @@
           </div>
         </article>
         <ul class="basic-list slider-controls">
-          <li><button class="slider-controls__button slider-controls__button_active" type="button" data-slide="1"></button></li>
+          <li><button class="slider-controls__button slider-controls__button_active" type="button"
+              data-slide="1"></button></li>
           <li><button class="slider-controls__button" type="button" data-slide="2"></button></li>
           <li><button class="slider-controls__button" type="button" data-slide="3"></button></li>
         </ul>
@@ -206,7 +207,8 @@
 
         <div class="grid-row">
           <ul class="col-3 basic-list services__controls">
-            <li><button type="button" class="button button_active services__button" data-slide="1">Доставка</button></li>
+            <li><button type="button" class="button button_active services__button" data-slide="1">Доставка</button>
+            </li>
             <li><button type="button" class="button services__button" data-slide="2">Гарантия</button></li>
             <li><button type="button" class="button services__button" data-slide="3">Кредит</button></li>
           </ul>
@@ -279,7 +281,7 @@
         <section class="col-6 info">
           <h2 class="basic-title info__title">О нас</h2>
           <p class="info__text">
-            Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+            Огромный выбор гаджетов не оставит равнодушным гика,<br> который есть в каждом из нас.
           </p>
           <p class="info__text">
             Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
@@ -325,7 +327,7 @@
           <input class="modal__input" name="modal-email" id="modal-email-field" type="email"
             placeholder="email@example.com">
         </label>
-        <label class="modal__item modal__item_textarea" for="">Текст письма:
+        <label class="modal__item modal__item_textarea" for="modal-text-field">Текст письма:
           <textarea class="modal__input modal__input_textarea" name="modal-text" id="modal-text-field"
             placeholder="В свободной форме"></textarea>
         </label>
@@ -400,7 +402,7 @@
   </footer>
   <!-- footer -->
 
-  <script src="js/script.js"></script>
+  <script src="js/script.mini.js"></script>
 
 </body>
 
