--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Моноподы для селфи</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.mini.css">
   <link rel="stylesheet" href="css/style.mini.css">
 </head>
 
@@ -25,7 +25,7 @@
 
         <ul class="basic-list col-6 grid-row  header-actions">
           <li class="col-6 header-actions__signin">
-            <a href="profile.html" class="basic-link basic-link_icon basic-link_icon_signin">Валентин
+            <a href="profile.html" class="basic-link basic-link_name basic-link_icon basic-link_icon_signin">Валентин
               Петухов</a>
             <a href="#" class="basic-link basic-link_signout">Выйти</a>
           </li>
@@ -273,13 +273,13 @@
             </ul>
 
             <section class="pages">
-              <button type="button" class="pages__button pages__button_disabled pages__button_back">Назад</button>
+              <a class="pages__button pages__button_disabled pages__button_back">Назад</a>
               <ul class="basic-list pages__list">
                 <li><a class="pages__link pages__link_active">1</a></li>
                 <li><a class="pages__link" href="#">2</a></li>
                 <li><a class="pages__link" href="#">3</a></li>
               </ul>
-              <button type="button" class="pages__button pages__button_next">Вперед</button>
+              <a href="#" class="pages__button pages__button_next">Вперед</a>
             </section>
           </section>
           <!-- /.catalog -->
@@ -289,15 +289,15 @@
   </main>
   <!-- .main -->
 
-  <footer class="footer">
-    <div class="container">
+  <div class="footer-wrapper">
+    <footer class="container footer">
       <div class="grid-row">
         <a class="col-6 footer__logo"><img src="img/footer/logo.svg" width="163" height="35" alt="Device"></a>
 
         <ul class="basic-list col-6 footer-actions">
           <li class="footer-actions__item">
             <a href="profile.html"
-              class="basic-link basic-link_theme_dark basic-link_icon basic-link_icon_signin">Валентин
+              class="basic-link basic-link_name basic-link_theme_dark basic-link_icon basic-link_icon_signin">Валентин
               Петухов</a>
             <a href="#" class="basic-link basic-link_theme_dark basic-link_icon  basic-link_signout">Выйти</a>
           </li>
@@ -351,8 +351,8 @@
           <img src="img/footer/logo-html.svg" width="27" height="34" alt="Html Academy">
         </a>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
   <!-- footer -->
 
 </body>
