--- a/catalog.html
+++ b/catalog.html
@@ -77,7 +77,7 @@
   <main class="main">
 
     <div class="container">
-      <h1 class="container basic-title catalog-title">Моноподы для селфи</h1>
+      <h1 class="basic-title catalog-title">Моноподы для селфи</h1>
       <ul class="basic-list breadcrumbs">
         <li><a href="#" class="breadcrumbs__item">Главная</a></li>
         <li><a href="#" class="breadcrumbs__item">Каталог товаров</a></li>
@@ -100,9 +100,8 @@
               <li class="sort__item"><a href="#" class="sort__link">По популярности</a></li>
             </ul>
             <div class="sort__controls">
-              <button class="sort__button sort__button_up"><span class="visually-hidden">По возрастанию</span></button>
-              <button class="sort__button sort__button_active sort__button_down"><span class="visually-hidden">По
-                  убыванию</span></button>
+              <a class="sort__button sort__button_up" aria-label="По возрастанию"></a>
+              <a href="#" class="sort__button sort__button_active sort__button_down" aria-label="По убыванию"></a>
             </div>
           </div>
         </div>
